cursive-bootstrap/tests/ui/E-SEM/E-SEM-3011.cursive
// RUN: compile-fail
// DIAG: E-SEM-3011
// SPEC: 8.17
// DESC: Method defined outside its parent type scope

procedure NotAType::method(~) -> i32 {  //~ ERROR E-SEM-3011: method outside type
    return 0
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
